@@ -6,6 +6,8 @@ Gora Change Log
 
 0.3 (trunk) Current Development:
 
+* GORA-157 gora-cassandra test failure - proposal to skip 10 test cases for a while (kazk)
+
 * GORA-156 Properly implement getSchemaName in CassandraStore (lewismc)
 
 * GORA-153 gora-cassandra does not correctly handle DELETED State for MAP (kazk)
